2001-07-30  Tuomas Kuosmanen  <tigert@ximian.com>

	* table.c: Changed the color of the Note table template so it
	looks nicer.

2001-07-30  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: use new rule icons

2001-07-29  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: fix typos so that label is
	actually set.

2001-07-26  Radek Doulik  <rodo@ximian.com>

	* popup.c (delete_table): use gtk_html_command
	(delete_row): ditto
	(delete_column): ditto
	(delete_cell_contents): ditto

2001-07-25  Radek Doulik  <rodo@ximian.com>

	* table.c (table_apply_cb): updated for API changes

2001-07-24  Radek Doulik  <rodo@ximian.com>

	* popup.c (insert_table_cb): new menuitem callback
	(insert_row_above): ditto
	(insert_row_below): ditto
	(insert_column_before): ditto
	(insert_column_after): ditto
	(delete_table): ditto
	(delete_column): ditto
	(delete_row): ditto
	(delete_cell_contents): ditto
	(prepare_properties_and_menu): added table insert/delete submenus

	* menubar.c (insert_table): new extracted function

2001-07-23  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: use new search icons for toolbar

	* cell.c: added scope option menu
	(cell_apply_1): extracted helper function
	(cell_apply_row): new helper function
	(cell_apply_col): new helper function
	(cell_apply_table): new helper function
	(cell_apply_cb): use scope and new helper functions
	(cell_apply_row): test if cell belongs to the same table
	(cell_apply_col): likewise
	(cell_apply_table): likewise

1904-01-03  Radek Doulik  <rodo@ximian.com>

	* toolbar.c (create_style_toolbar): let toolbar extend

2001-07-20  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: added 16 pixels wide insert
	image/link/table icons to menu

	* table.c (table_apply_cb): use html_engine_table_set_cols and
	html_engine_table_set_rows

	* cell.c (cell_widget): use UPPER_FIX

	* table.c (UPPER_FIX): fix for glade spin upper limit
	(table_widget): use UPPER_FIX